Added Client docs
